EXTRA_DIST = barc.png baxispo.png bclear.png bcross.png bdataopn.png	\
	 bdatapo.png bdraw.png beval.png bframe.png bgauss.png		\
	 blgndpo.png bline.png bload.png bmark.png bmath.png		\
	 bpoint.png bpreview.png bprint.png brect.png bsave.png		\
	 bscale.png bscundo.png bsection.png bsingle.png btext.png	\
	 btrim.png bzoom.png winaxis.png wincoord.png windata.png	\
	 wininfo.png winlgnd.png winmerge.png icon.png aclear.png	\
	 addgraph.png axispo.png datapo.png draw.png eval.png		\
	 fopen.png infowin.png lapoint.png legend.png lwindow.png	\
	 math.png pointer.png scundo.png trimming.png

htmlimgdir = $(docdir)/html/img

htmlimg_DATA = ${EXTRA_DIST}
