EXTRA_DIST = axis.jpg axisbase.jpg \
	axisfont.jpg axisgage.jpg axisnum.jpg \
	axispos.jpg data.jpg datafit.jpg \
	dataload.jpg datamask.jpg datamath.jpg \
	datamove.jpg grid.jpg lgndarc.jpg \
	lgndcurv.jpg lgndgaus.jpg lgndline.jpg \
	lgndmark.jpg lgndpoly.jpg lgndrect.jpg \
	lgndtext.jpg loadngp.jpg loadprm.jpg \
	merge.jpg pageord.jpg prefmisc.png \
	save.jpg 

htmljadialogdir = $(docdir)/html_ja/dialogs

htmljadialog_DATA = ${EXTRA_DIST}
